vlib/v/parser/tests/array_decl_type_alias_err.out
vlib/v/parser/tests/array_decl_type_alias_err.vv:1:12: error: `array` is an internal type, it cannot be used directly. Use `[]int`, `[]Foo` etc
    1 | type Arr = array
      |            ~~~~~
